# AgentXogs

./: .gitignore  README.md  config.json  main.py  pyproject.toml  run_cli.py
.agents/: AGENTS.md
.agents/skills/aggregate_logs/scripts/: run.py
.agents/skills/detect_anomalies/scripts/: run.py
.agents/skills/fetch_logs/scripts/: run.py
.agents/skills/generate_summary/scripts/: run.py
.agents/skills/high_hypothesis/scripts/: run.py
.agents/skills/livelogs_insights/scripts/: run.py
.github/workflows/: ci.yml  docs-deploy.yml
docs/: docs.json  package-lock.json  package.json
docs/pages/: home.mdx  quickstart.mdx
docs/pages/concepts/: architecture.mdx
docs/pages/skills/: logsource-discovery.mdx
docs/pages_test/: README.mdx  cli.mdx  home.mdx  quickstart.mdx
docs/pages_test/api/: outputs.mdx  pipeline.mdx
docs/pages_test/concepts/: architecture.mdx  pipeline.mdx  skills.mdx
docs/pages_test/configuration/: log-sources.mdx
docs/pages_test/examples/: custom-pipeline.mdx  daily-health-check.mdx  incident-investigation.mdx
docs/pages_test/skills/: high-hypothesis.mdx  livelogs-insights.mdx  parse-logs.mdx  recommend-actions.mdx
docs/snippets/: LogoCarousel.jsx
metadata/: METADATA.md  sample_logs.json  sample_metrics.json  sample_parsed_events.json
scripts/: pipeline.sh
src/agentX/cli/: __init__.py  animation.py  live_display.py  main.py  output.py  prompts.py
src/agentX/config/: anomaly_thresholds.yaml  baseline_metrics.json  log_patterns.yaml  log_sources.yaml
src/agentX/pipeline/: pipeline.py
src/agentX/shared/: utils.py
(+19 files in other folders)
